--- a/src/app/component/show-time/selected-movie-show-time/selected-movie-show-time.component.html
+++ b/src/app/component/show-time/selected-movie-show-time/selected-movie-show-time.component.html
@@ -1,1 +1,78 @@
-<p>selected-movie-show-time works!</p>
+<div class="st_slider_rating_main_wrapper float_left" *ngIf="!isDisplay">
+    <div class="container">
+        <div class="st_calender_tabs">
+
+            <ul class="nav nav-tabs">
+                <!--                <li class="active"> <a data-toggle="tab" href="#home"><span>WED</span> <br> 19</a>-->
+                <!--                </li>-->
+                <li class="nav-item"  *ngFor="let item of listDates; let in= index "  >
+                    <a data-toggle="tab" href="#menu{{item.getTime()}}" (click)="takeData(item)"> <span>{{item |date:'ccc'}}</span>
+                        <br>{{item.getDate()}}&nbsp;-{{item.getMonth()|date:'MM'}}</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</div>
+<p style="align-content: center">Phim : {{listMovies[0].movie.name}}</p>
+
+<div class="st_slider_index_sidebar_main_wrapper st_slider_index_sidebar_main_wrapper_booking float_left" *ngIf="!isDisplay">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                <div class="st_indx_slider_main_container float_left">
+                    <div class="row">
+
+
+                        <div class="col-md-12">
+                            <div class="tab-content">
+                                <div id="home" class="tab-pane active">
+                                    <div class="st_calender_contant_main_wrapper float_left">
+                                        <div class="st_calender_row_cont float_left">
+                                            <div class="st_calender_asc">
+                                                <div class="st_calen_asc_heart"><a href="#">	<i class="fa fa-heart"></i></a>
+                                                </div>
+                                                <div class="st_calen_asc_heart_cont">
+                                                    <h3>Rạp cgv: </h3>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="menu{{time.getTime()}}" *ngFor="let time of listDates " class="tab-pane fade">
+                                    <div class="st_calender_contant_main_wrapper float_left">
+                                        <div class="st_calender_row_cont float_left">
+                                            <div class="st_calender_asc">
+                                                <div class="st_calen_asc_heart"><a href="#">	<i class="fa fa-heart"></i></a>
+                                                </div>
+                                                <div class="st_calen_asc_heart_cont">
+                                                    <h3>hello</h3>
+
+                                                </div>
+                                            </div>
+                                            <div class="st_calen_asc_tecket_time_select">
+                                                <ul >
+                                                    <li  *ngFor="let movieTime of listMovies" >	<span>
+															<h4>{{movieTime.price}} VND</h4>
+															<input type="hidden" id="showTime" value="{{this.convertTime(movieTime.startTime)}}">
+															</span>
+                                                        <a (click)="takeTime(this.convertTime(movieTime.startTime))" id="{{movieTime.id}}">{{this.convertTime(movieTime.startTime)}}</a>
+                                                    </li>
+
+                                                </ul>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<app-selected-seat [movieShow]="movieDTOTG" *ngIf="isDisplay"></app-selected-seat>
