--- a/src/app/component/movie/list-movie/list-movie.component.html
+++ b/src/app/component/movie/list-movie/list-movie.component.html
@@ -1,7 +1,7 @@
 <!-- preloader Start -->
 <div id="preloader">
     <div id="status">
-        <img src="assets/images/header/horoscope.gif" id="preloader_image" alt="loader">
+        <img src="../../../../assets/images/header/horoscope.gif" id="preloader_image" alt="loader">
     </div>
 </div>
 <!-- prs navigation Start -->
