Create Module (Component + Service + Routing)

--- a/src/app/component/display/navbar/navbar.component.html
+++ b/src/app/component/display/navbar/navbar.component.html
@@ -38,7 +38,7 @@
     <div class="prs_navi_right_main_wrapper">
       <div class="prs_slidebar_wrapper">
         <button class="second-nav-toggler" type="button" style="color: white">
-          {{authService.getFullName()}}
+<!--          {{authService.getFullName()}}-->
         </button>
       </div>
       <div class="prs_top_login_btn_wrapper">
