--- a/src/app/component/login/login/login.component.css
+++ b/src/app/component/login/login/login.component.css
@@ -9,19 +9,24 @@
     color: white;
 }
 
-
-/*.button-submit:hover {*/
-/*    background: #ff6644;*/
-/*    color: #fff;*/
-/*    border: 1px solid #ff4444;*/
-/*    -webkit-transition: all 0.5s;*/
-/*    -o-transition: all 0.5s;*/
-/*    -ms-transition: all 0.5s;*/
-/*    -moz-transition: all 0.5s;*/
-/*    transition: all 0.5s;*/
-/*}*/
+.forgot-password:hover{
+    color: #00A8FF;
+}
 
 .cursor-pointer {
     cursor: pointer;
+}
+
+#inline {
+    width: 100%;
+    display: flex;
+}
+
+.one, .two {
+    margin: 10px;
+}
+.two{
+    width: 137px;
+    margin-left: 20%;
 }
 
