update function ForgotPassword

--- a/src/app/component/login/login/login.component.css
+++ b/src/app/component/login/login/login.component.css
@@ -30,3 +30,13 @@
     margin-left: 20%;
 }
 
+.media-login{
+    width: 500px;
+}
+
+@media screen and (max-width: 530px) {
+    .media-login {
+        width: 80%;
+    }
+}
+
