--- a/src/app/component/login/login/login.component.html
+++ b/src/app/component/login/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="width: 70%">
+<div class="container media-login">
     <form [formGroup]="formLogin" (ngSubmit)="login()">
 
         <div class="st_pop_form_heading_wrapper float_left">
