update button Login

--- a/src/app/component/login/login/login.component.html
+++ b/src/app/component/login/login/login.component.html
@@ -41,7 +41,7 @@
         <label class="cursor-pointer" for="vehicle1" style="margin-left: 5px">Lưu đăng nhập</label>
 
         <div class="button-submit">
-            <button type="submit" class="btn btn-link btn-lg btn-block login">Đăng nhập</button>
+            <button type="submit" class="btn btn-link btn-lg btn-block login" style="text-decoration: none">Đăng nhập</button>
         </div>
 
     </form>
