--- a/src/app/component/movie/list-movie/list-movie.component.html
+++ b/src/app/component/movie/list-movie/list-movie.component.html
@@ -1,8 +1,8 @@
 <!-- preloader Start -->
 <div id="preloader">
-    <div id="status">
-        <img src="../../../../assets/images/header/horoscope.gif" id="preloader_image" alt="loader">
-    </div>
+  <div id="status">
+    <img src="assets/images/header/horoscope.gif" id="preloader_image" alt="loader">
+  </div>
 </div>
 <!-- prs navigation Start -->
 
@@ -86,66 +86,66 @@
 <!-- prs Slider End -->
 <!-- prs upcomung Slider Start -->
 <div class="prs_upcom_slider_main_wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="prs_heading_section_wrapper">
-                    <h2 style="font-family: Arimo,serif">Phim sắp chiếu</h2>
-                </div>
-            </div>
-            <div class="tab-content">
-                <div role="tabpanel" class="tab-pane  in active" id="best">
-                    <div class="prs_upcom_slider_slides_wrapper">
-                        <div class="owl-carousel owl-theme">
-                            <div class="item">
-                                <div class="row">
-                                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 prs_upcom_slide_first"
-                                         *ngFor="let movie of movieList">
-                                        <div class="prs_upcom_movie_box_wrapper">
-                                            <div class="prs_upcom_movie_img_box">
-                                                <img [src]="movie.poster ? movie.poster : 'assets/images/movie-night-png.png'"
-                                                     src="" [alt]="movie.name"/>
-                                                <div class="prs_upcom_movie_img_overlay"></div>
-                                                <div class="prs_upcom_movie_img_btn_wrapper">
-                                                    <ul>
-                                                        <li><a href="#">Chi tiết</a>
-                                                        </li>
-                                                        <li><a href="#">Đặt vé</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                            <div class="prs_upcom_movie_content_box">
-                                                <div class="prs_upcom_movie_content_box_inner">
-                                                    <h2><a href="#">{{movie.name}}</a></h2>
-                                                    <p class="text-truncate" style="width: 200px">
-                                                        <span *ngFor="let genre of movie.genreList; let i = index">{{genre.name}} {{i == movie.genreList.length - 1 ? '' : ', '}}</span>
-                                                    </p>
-                                                    <p>Thời lượng: {{movie.duration}}</p>
-                                                    <p>Khởi chiếu: {{movie.openingDay}}</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="prs_animate_btn1 prs_upcom_main_wrapper">
-                                <ul>
-                                    <li><a href="#" class="button button--tamaya prs_upcom_main_btn"
-                                           style="margin-top: -10px" data-text="Xem tất cả"><span>Xem tất cả</span></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="prs_heading_section_wrapper">
+          <h2 style="font-family: Arimo,serif">Phim sắp chiếu</h2>
         </div>
+      </div>
+      <div class="tab-content">
+        <div role="tabpanel" class="tab-pane  in active" id="best">
+          <div class="prs_upcom_slider_slides_wrapper">
+            <div class="owl-carousel owl-theme">
+              <div class="item">
+                <div class="row">
+                  <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 prs_upcom_slide_first"
+                       *ngFor="let movie of movieList">
+                    <div class="prs_upcom_movie_box_wrapper">
+                      <div class="prs_upcom_movie_img_box">
+                        <img [src]="movie.poster ? movie.poster : 'assets/images/movie-night-png.png'"
+                             src="" [alt]="movie.name"/>
+                        <div class="prs_upcom_movie_img_overlay"></div>
+                        <div class="prs_upcom_movie_img_btn_wrapper">
+                          <ul>
+                            <li><a href="#">Chi tiết</a>
+                            </li>
+                            <li><a href="#">Đặt vé</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="prs_upcom_movie_content_box">
+                        <div class="prs_upcom_movie_content_box_inner">
+                          <h2><a href="#">{{movie.name}}</a></h2>
+                          <p class="text-truncate" style="width: 200px">
+                            <span *ngFor="let genre of movie.genreList; let i = index">{{genre.name}} {{i == movie.genreList.length - 1 ? '' : ', '}}</span>
+                          </p>
+                          <p>Thời lượng: {{movie.duration}}</p>
+                          <p>Khởi chiếu: {{movie.openingDay}}</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+              <div class="prs_animate_btn1 prs_upcom_main_wrapper">
+                <ul>
+                  <li><a href="#" class="button button--tamaya prs_upcom_main_btn"
+                         style="margin-top: -10px" data-text="Xem tất cả"><span>Xem tất cả</span></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 <!-- prs upcomung Slider End -->
 <!--&lt;!&ndash; prs video section Start &ndash;&gt;-->
