--- a/src/app/component/booking/list-booking/list-booking.component.html
+++ b/src/app/component/booking/list-booking/list-booking.component.html
@@ -1,1 +1,51 @@
-<p>list-booking works!</p>
+<div *ngIf="bookingList.length==0" class="container text-center alert-danger" style="margin-top: 25%">Hiện không có dữ liệu nào phù hợp!</div>
+<div *ngIf="bookingList.length!=0" class="container" style="margin-top: 10%">
+    <h1 class="text-center font-weight-bold">DANH SÁCH ĐẶT VÉ</h1>
+    <div class="title_right">
+        <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-left top_search">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Tìm kiếm" #search>
+                <span class="input-group-btn">
+                      <button class="btn btn-default text-danger" type="button" (click)="searchBooking(search.value)">Tìm kiếm!</button>
+                    </span>
+            </div>
+        </div>
+    </div>
+    <div class="table-responsive">
+        <table class="table table-striped jambo_table bulk_action" *ngIf="bookingList != null">
+            <thead>
+            <tr class="headings">
+                <th scope="column-title">Mã đặt vé</th>
+                <th scope="column-title">Mã thành viên</th>
+                <th scope="column-title">Họ tên</th>
+                <th scope="column-title">CMND</th>
+                <th scope="column-title">Số điện thoại</th>
+                <th scope="column-title">Phim</th>
+                <th scope="column-title">Xuất chiếu</th>
+                <th scope="column-title"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="even pointer" *ngFor="let booking of bookingList | paginate :{itemsPerPage:2 ,currentPage : p}">
+                <th>{{booking.id}}</th>
+                <td>{{booking.user.id}}</td>
+                <td>{{booking.user.fullName}}</td>
+                <td class="text-right">{{booking.user.idCard}}</td>
+                <td class="text-right">{{booking.user.phoneNumber}}</td>
+                <td>{{booking.showTime.movie.name}}</td>
+                <td class="text-right">{{booking.showTime.startDate | date:'dd-MM-yyyy' + " " + booking.showTime.startTime}}</td>
+                <td class="text-center">
+                    <a class="btn text-light" style="background: #26B99A" [routerLink]="[booking.id]">Nhận vé</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <!--        Pagination-->
+    <pagination-controls class="text-right" (pageChange)="p = $event"
+                         previousLabel="Trước"
+                         nextLabel="Sau"
+                         [autoHide]="true">
+    </pagination-controls>
+</div>
+
