--- a/src/app/component/movie/edit-movie/edit-movie.component.html
+++ b/src/app/component/movie/edit-movie/edit-movie.component.html
@@ -1,1 +1,172 @@
-<p>edit-movie works!</p>
+<div class="container">
+    <form class="form-group" [formGroup]="formEditMovie" (ngSubmit)="editMovie()">
+        <h2>Thêm mới phim</h2>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <div class="col-sm-6">
+                </div>
+
+                <div class="col-sm-6">
+                    <div><img *ngIf="url" [src]="url" class="img-thumbnail" style="width: 200px"></div>
+                    <input type="file" id="img" name="img" (change)="selectFile($event)" formControlName="poster">
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class="col-2 col-form-label">Tên phim</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" formControlName="name">
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class="col-2 col-form-label">Từ ngày</label>
+                <div class="col-sm-8">
+                    <input type="datetime-local" class="form-control" formControlName="openingDay">
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class=" col-2 col-form-label">Đến ngày</label>
+                <div class="col-sm-8">
+                    <input type="datetime-local" class="form-control" formControlName="endDay">
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class="col-2 col-form-label">Diễn viên</label>
+                <div class="col-sm-8">
+                    <mat-select class="custom-select">
+                        <mat-option *ngFor="let actor of actorList"><input type="checkbox" formArrayName="actorList"
+                                                                           (change)="onCheckboxChangeActor($event,actor)"/>
+                            <label class="form-check-label">{{actor.name}}</label></mat-option>
+                    </mat-select>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class=" col-2 col-form-label">Hãng phim</label>
+                <div class="col-sm-8">
+                    <mat-select class="custom-select">
+                        <mat-option *ngFor="let producer of producerList"><input type="checkbox"
+                                                                                 formArrayName="producerList"
+                                                                                 (change)="onCheckboxChangeProducer($event,producer)"/>
+                            <label class="form-check-label">{{producer.name}}</label></mat-option>
+                    </mat-select>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class="col-2 col-form-label">Đạo diễn</label>
+                <div class="col-sm-8">
+                    <mat-select class="custom-select">
+                        <mat-option *ngFor="let director of directorList"><input type="checkbox"
+                                                                                 formArrayName="directorList"
+                                                                                 (change)="onCheckboxChangeDirector($event,director)"/>
+                            <label class="form-check-label">{{director.name}}</label></mat-option>
+                    </mat-select>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class="col-2 col-form-label">Thời lượng</label>
+                <div class="col-sm-8">
+                    <input type="number" class="form-control" formControlName="duration">
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class="col-2 col-form-label">Phiên bản</label>
+                <div class=" form-check form-check-inline">
+                    <input class="form-check-input" type="radio"
+                           value="_2D" formControlName="type">
+                    <label class="form-check-label">2D</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio"
+                           value="_3D" formControlName="type">
+                    <label class="form-check-label">3D</label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class="col-2 col-form-label">Trailer</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" formControlName="trailer">
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class="col-2 col-form-label">Thể loại</label>
+
+                <div *ngFor="let genre of genreList">
+                    <div class="col-4">
+                        <input type="checkbox" formArrayName="genreList"
+                               (change)="onCheckboxChangeGenre($event,genre)"/>
+                        <label class="form-check-label">{{genre.name}}</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+<!--        <div class="form-group">-->
+<!--            <div class="col-sm-12 row">-->
+<!--                <label class="col-2 col-form-label">Phòng chiếu</label>-->
+<!--                <div class="col-sm-8">-->
+<!--                    <mat-select class="custom-select" formControlName="theaterList">-->
+<!--                        <mat-option *ngFor="let theater of theaterDTOList"-->
+<!--                                    [value]="theater">{{theater.name}}</mat-option>-->
+<!--                    </mat-select>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+        <!--                        <div class="form-group">-->
+        <!--                            <div class="col-sm-12 row" formArrayName="startTime">-->
+        <!--                                <label class="col-2 col-form-label">Lịch chiếu</label>-->
+        <!--                                <div class="col-sm-2">-->
+        <!--                                    <input type="text" class="form-control" #element>-->
+        <!--                                </div>-->
+        <!--                                <div class="col-sm-2" id="showtime">-->
+        <!--                                    <button class="btn btn-primary" (click)="addTime(element)">Thêm giờ chiếu</button>-->
+        <!--                                </div>-->
+
+        <!--                            </div>-->
+        <!--                            <p> {{startTimeList}}</p>-->
+        <!--                        </div>-->
+        <!--                        <div class="form-group">-->
+        <!--                            <div class="col-sm-12 row" formArrayName="startTime">-->
+        <!--                                <label class="col-2 col-form-label" id="hidden"></label>-->
+        <!--                                <div class="col-sm-8">-->
+        <!--                                    <input class="form-control" formControlName="showTimeList">-->
+        <!--                                </div>-->
+        <!--                            </div>-->
+        <!--                        </div>-->
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class="col-2 col-form-label">Nội dung</label>
+                <div class="col-sm-8">
+                    <textarea type="text" class="form-control" formControlName="content"></textarea>
+                </div>
+            </div>
+        </div>
+        <div align="center">
+            <button routerLink="/movie" type="button" class="btn btn-secondary">Quay lại</button>
+            <button type="submit" class="btn btn-primary">Chỉnh sửa</button>
+        </div>
+    </form>
+
+</div>
+
+
+
+
