--- a/src/app/component/booking/list-booking/list-booking.component.html
+++ b/src/app/component/booking/list-booking/list-booking.component.html
@@ -1,15 +1,23 @@
-<div *ngIf="bookingList.length==0" class="container text-center alert-danger" style="margin-top: 25%">Hiện không có dữ liệu nào phù hợp!</div>
+<div *ngIf="bookingList.length==0" class="container text-center alert-danger" style="margin-top: 25%">Hiện không có dữ
+    liệu nào phù hợp!
+</div>
 <div *ngIf="bookingList.length!=0" class="container" style="margin-top: 10%">
     <h1 class="text-center font-weight-bold">DANH SÁCH ĐẶT VÉ</h1>
     <div class="table-responsive">
         <div class="title_right">
             <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-left top_search">
-                <div class="input-group">
-                    <input type="text" class="form-control text" placeholder="Tìm kiếm" #search>
-                    <span class="input-group-btn">
-                      <button class="btn btn-default text-danger text" type="button" (click)="searchBooking(search.value)">Tìm kiếm!</button>
-                    </span>
-                </div>
+                <form [formGroup]="searchForm">
+                    <div class="input-group">
+                        <input type="text" class="form-control text" formControlName="search" placeholder="Tìm kiếm"
+                               #search>
+                        <span class="input-group-btn">
+                            <button class="btn btn-default text-danger text" type="button"
+                                    (click)="searchBooking(search.value)">Tìm kiếm!</button>
+                        </span>
+                    </div>
+                    <small class="form-text text-muted text-danger"
+                           *ngIf="searchForm.get('search')?.invalid && searchForm.get('search')?.touched">Độ dài nhỏ hơn 100 ký tự!</small>
+                </form>
             </div>
         </div>
         <table class="table table-striped jambo_table bulk_action" *ngIf="bookingList != null">
@@ -35,7 +43,8 @@
                 <td>{{booking.showTime.movie.name}}</td>
                 <td class="text-right">{{booking.showTime.startDate | date:'dd-MM-yyyy' + " " + booking.showTime.startTime}}</td>
                 <td class="text-center">
-                    <a class="btn text-light text" style="background: #26B99A" [routerLink]="[booking.id]">Nhận vé</a>
+                    <a class="btn text-light text" style="background: #26B99A; color: white"
+                       [routerLink]="[booking.id]">Nhận vé</a>
                 </td>
             </tr>
             </tbody>
