--- a/src/app/component/ticket/ticket-receipt-confirmation/ticket-receipt-confirmation.component.html
+++ b/src/app/component/ticket/ticket-receipt-confirmation/ticket-receipt-confirmation.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="!booking" class="container text-center alert-danger" style="margin-top: 25%">Hiện không có dữ liệu nào phù
     hợp!
 </div>
-<div *ngIf="booking" class="container" style="margin: 10% 20% 0% 20%">
-    <h1 *ngIf="!checkStatus">Xác nhận đặt vé</h1>
-    <h1 *ngIf="checkStatus">Thông tin đặt vé</h1>
+<div *ngIf="booking" class="container" style="margin-top: 10%">
+    <h1 class="text-center font-weight-bold" *ngIf="!checkStatus">XÁC NHẬN NHẬN VÉ</h1>
+    <h1 class="text-center font-weight-bold" *ngIf="checkStatus">THÔNG TIN ĐẶT VÉ</h1>
     <hr>
     <table class="container">
         <tr>
@@ -59,7 +59,7 @@
                         </tr>
                     </table>
                     <br>
-                    <button *ngIf="!checkStatus" type="button" class="btn text-light" style="background: #26B99A; font-size: 24px"
+                    <button *ngIf="!checkStatus" type="button" class="btn text-light" style="background: #26B99A; color: white;"
                             (click)="ticketReceipt(booking.id)">Xác nhận nhận vé
                     </button>
                 </div>
