list-update-HuyTG

--- a/src/app/component/user/list-employee/list-employee.component.html
+++ b/src/app/component/user/list-employee/list-employee.component.html
@@ -1,1 +1,70 @@
-<p>list-employee works!</p>
+
+<h2 class="header">Quản Lý Nhân Viên</h2>
+
+<div class="x_content">
+    <div id="datatable_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
+        <div class="row">
+            <div class="col-sm-6">
+                <div id="datatable_filter" class="dataTables_filter"><label>&emsp;Tìm kiếm:&ensp;<input type="search"
+                                                                                                        class="form-control input-sm"
+                                                                                                        placeholder=""
+                                                                                                        aria-controls="datatable"></label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <table id="datatable" class="table table-striped table-bordered dataTable no-footer" role="grid"
+                       aria-describedby="datatable_info">
+                    <thead>
+                    <tr role="row">
+                        <th class="sorting_asc" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1"
+                            aria-sort="ascending" aria-label="Name: activate to sort column descending"
+                            style="width: 190px;">Mã Nhân Viên
+                        </th>
+                        <th class="sorting" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1"
+                            aria-label="Position: activate to sort column ascending" style="width: 310px;">Tên Nhân Viên
+                        </th>
+                        <th class="sorting" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1"
+                            aria-label="Office: activate to sort column ascending" style="width: 143px;">Số CMND
+                        </th>
+                        <th class="sorting" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1"
+                            aria-label="Age: activate to sort column ascending" style="width: 76px;">Email
+                        </th>
+                        <th class="sorting" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1"
+                            aria-label="Start date: activate to sort column ascending" style="width: 141px;">Số điện thoại
+                        </th>
+                        <th class="sorting" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1"
+                            aria-label="Salary: activate to sort column ascending" style="width: 109px;">Địa chỉ
+                        </th>
+                        <th class="sorting" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1"
+                            aria-label="Salary: activate to sort column ascending" style="width: 109px;">Chức năng
+                        </th>
+
+                    </tr>
+                    </thead>
+
+
+                    <tbody>
+
+
+                    <tr role="row" class="odd" *ngFor="let employee of employeeList">
+                        <td class="sorting_1">{{employee.id}}</td>
+                        <td>{{employee.fullName}}</td>
+                        <td>{{employee.idCard}}</td>
+                        <td>{{employee.email}}</td>
+                        <td>{{employee.phoneNumber}}</td>
+                        <td>{{employee.address}}</td>
+                        <td class="edit-user">
+                            <a [routerLink]="'/update/' + employee.id">&emsp;Sửa&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a [routerLink]="'delete/' + employee.id">&emsp;Xóa</a>
+                        </td>
+
+                    </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
