--- a/src/app/component/movie/statistic-movie/statistic-movie.component.html
+++ b/src/app/component/movie/statistic-movie/statistic-movie.component.html
@@ -1,4 +1,4 @@
-<div class="container align-items-center" style="display: block">
+<div class="container align-items-center">
     <h2 class="text-center">Thống kê phim</h2>
     <table class="table table-striped table-bordered table-responsive text-center">
         <thead class="thead-dark">
